# The-Overwatch-VPN-2.0

./: README.md  build.bat  installer.iss
Ip-Puller/: go.mod
Ip-Puller/cmd/puller/: main.go
Ip-Puller/internal/api/: api.go
Ip-Puller/internal/github/: github.go
Ip-Puller/internal/output/: output.go
Ip-Puller/internal/regions/: regions.go
The-OW-VPN-2.0/: README.md  package.json
The-OW-VPN-2.0/src/: index.html  main.js  styles.css
The-OW-VPN-2.0/src-tauri/: Cargo.toml  tauri.conf.json
The-OW-VPN-2.0/src-tauri/icons/: icon.icns
The-OW-VPN-2.0/src-tauri/src/: lib.rs  main.rs
firewall-interaction/: README.md  build.bat  go.mod  go.sum  sidecar.manifest
firewall-interaction/cmd/sidecar/: main.go
firewall-interaction/internal/config/: config.go
firewall-interaction/internal/firewall/: firewall.go
firewall-interaction/internal/process/: process.go
fyne-gui/: go.mod  main.go
installer/: installer.iss
